--- a/index.html
+++ b/index.html
@@ -92,11 +92,14 @@
 </header>
 
   
-  This is the test post for hugo.
-Equation:
-$$ x=a^2+b^2 $$
-Chinese test:
-先帝创业未半而中道崩殂，今天下三分，益州疲弊，此诚危急存亡之秋也。然侍卫之臣不懈于内，忠志之士忘身于外者，盖追先帝之殊遇，欲报之于陛下也。诚宜开张圣听，以光先帝遗德，恢弘志士之气，不宜妄自菲薄，引喻失义，以塞忠谏之路也。
+  <p>This is the test post for hugo.</p>
+<p>Equation:</p>
+<p>$$ x=a^2+b^2 $$</p>
+<p>Chinese test:</p>
+  
+  <p>
+    <a class="u-clickable" href="https://xiahualiu.github.io/posts/hello-world/">Read More…</a>
+  </p>
   
   
   
