--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </li>
       
       <li class="Banner-item">
-        <a class="Banner-link u-clickable" href="https://xiahualiu.github.io/about/">About</a>
+        <a class="Banner-link u-clickable" href="https://github.com/xiahualiu">About</a>
       </li>
       
       <li class="Banner-item">
