--- a/index.html
+++ b/index.html
@@ -87,8 +87,6 @@
 
 
 
-
-
   
   <link rel="stylesheet" href="https://xiahualiu.github.io/css/base.min.a325db5a8beaa47e0541e6117eb67c3bc54cf8945100141e8a9defb2533f7344.css" integrity="sha256-oyXbWovqpH4FQeYRfrZ8O8VM&#43;JRRABQeip3vslM/c0Q=" crossorigin="anonymous">
   
@@ -134,7 +132,7 @@
 </header>
 
   
-  <p>2019 07 28 Partial Fraction Expansion&quot;rtial fraction expansion (also known as partial fraction decomposition) is a very basic math operation when we want to simplify a problem involving a fraction with polynomial numerator and denominator. We have some methods to handle the fundamental fraction terms like Laplace transform of a simple exponential signal is:</p>
+  <p>Partial fraction expansion (also known as partial fraction decomposition) is a very basic math operation when we want to simplify a problem involving a fraction with polynomial numerator and denominator. We have some methods to handle the fundamental fraction terms like Laplace transform of a simple exponential signal is:</p>
   
   <p>
     <a class="u-clickable" href="https://xiahualiu.github.io/posts/2019-07-28-partial-fraction-expansion/">Read More…</a>
@@ -165,7 +163,7 @@
 </header>
 
   
-  <p>wadays, cyclic redundancy check (CRC) is widely used on various fields, including data transmission or data integraty check, e.g UART or CAN bus. For many new hardware beginning learners, CRC appears to be a complexed mathematical blackbox which produces a serial of seemingly gibberish binary numbers. But it indeed is a very reliable mechanics which extracts the feature of the data and simple to understand and implement.</p>
+  <p>Nowadays, cyclic redundancy check (CRC) is widely used on various fields, including data transmission or data integraty check, e.g UART or CAN bus. For many new hardware beginning learners, CRC appears to be a complexed mathematical blackbox which produces a serial of seemingly gibberish binary numbers. But it indeed is a very reliable mechanics which extracts the feature of the data and simple to understand and implement.</p>
   
   <p>
     <a class="u-clickable" href="https://xiahualiu.github.io/posts/2019-04-25-lfsr-crc/">Read More…</a>
