--- a/index.html
+++ b/index.html
@@ -93,6 +93,19 @@
         onload="renderMathInElement(document.body);"></script>
 </head>
 <body>
+<script>
+      renderMathInElement(
+          document.body,
+          {
+              delimiters: [
+                  {left: "$$", right: "$$", display: true},
+                  {left: "\\[", right: "\\]", display: true},
+                  {left: "$", right: "$", display: false},
+                  {left: "\\(", right: "\\)", display: false}
+              ]
+          }
+      );
+</script>
   <nav class="u-background">
   <div class="u-wrapper">
     <ul class="Banner">
