--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ renderMathInElement(
               delimiters: [
                   {left: "$$", right: "$$", display: true},
                   {left: "\\[", right: "\\]", display: true},
-                  {left: "\$", right: "\$", display: false},
+                  {left: "$", right: "$", display: false},
                   {left: "\\(", right: "\\)", display: false}
               ]
           }
