--- a/index.html
+++ b/index.html
@@ -93,19 +93,6 @@
         onload="renderMathInElement(document.body);"></script>
 </head>
 <body>
-<script>
-renderMathInElement(
-          document.body,
-          {
-              delimiters: [
-                  {left: "$$", right: "$$", display: true},
-                  {left: "\\[", right: "\\]", display: true},
-                  {left: "$", right: "$", display: false},
-                  {left: "\\(", right: "\\)", display: false}
-              ]
-          }
-      );
-</script>
   <nav class="u-background">
   <div class="u-wrapper">
     <ul class="Banner">
@@ -145,7 +132,7 @@ renderMathInElement(
 </header>
 
   
-  <p>Matrix calculus is very important in machine learning and control theories. However there are all kinds of rules making it hard to remember and use. In this post, I summarize some basic rules and an important proof in machine learning theory, which includes the famous &ldquo;Trace Trick&rdquo;! This trick is super useful and super hard as well! Haha, this is the reason why we always explore new things, because it is hard!</p>
+  <p>Matrix calculus is very important in machine learning and control theories. However there are all kinds of rules making it hard to remember and use. In this post, I summarize some basic rules and an important proof in machine learning theory, which includes the famous &quot;Trace Trick&quot;! This trick is super useful and super hard as well! Haha, this is the reason why we always explore new things, because it is hard!</p>
   
   <p>
     <a class="u-clickable" href="https://xiahualiu.github.io/posts/2020-01-30-matrix-multiplication/">Read More…</a>
