--- a/index.html
+++ b/index.html
@@ -123,9 +123,8 @@
       
         Some random C++ notes I learned.
 GCC Search PathMany people mistakingly think gcc searches $PATH for all #include preprocessors but it is actually not.
-gcc has two ways to look for the included files.
-One is searching inside the standard system directories, which is hardwared into the gcc itself for a specific system. You can force gcc to only search in this way with the angle-bracket form #include&lt;file&gt;.
-You can use
+gcc has 3 ways to look for the included files.
+Searching inside the standard system directories, which is hardwared into the gcc itself for a specific system. You can force gcc to only search in this way with the angle-bracket form #include&lt;file&gt;. You can use
         
           <p>
             <a class="u-clickable" href="/posts/cpp-notes/">Read More…</a>
